<resources>

    <string name="app_name">JiaxingLi_StCyrShemar_COMP304Sec002_Lab4_Ex1</string>
    <string name="hint_NurseID">Nurse ID</string>
    <string name="hint_LoginPassword">Password</string>
    <string name="hint_FirstName">First Name</string>
    <string name="hint_LastName">Last Name</string>
    <string name="hint_Department">Department</string>
    <string name="hint_Room">Room</string>
    <string name="hint_TestID">TestID</string>
    <string name="hint_PatientID">PatientID</string>
    <string name="hint_BPL">BPL</string>
    <string name="hint_BPH">BPH</string>
    <string name="btn_TestView">Next</string>
    <string name="hint_Temp">Temperature</string>
    <string name="hint_ViewPatientInfo">View Patient Info</string>
    <string name="hint_ViewTestInfo">View Test Info</string>
    <string name="btn_Login">Login</string>
    <string name="btn_Register">Register</string>
    <string name="btn_Create">Create</string>
    <string name="btn_Patient">Patient</string>
    <string name="btn_Test">Test</string>
    <string name="hint_btnUpdate">Update</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string-array name="departments_array">
        <item>Emergency</item>
        <item>Cardiology</item>
        <item>Nursing</item>
    </string-array>
</resources>